# integrative-programming

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  deny.toml  docker-compose.yml
.github/workflows/: ci.yml
.sisyphus/evidence/: task-1-cargo-check.txt  task-1-git-init.txt
.sisyphus/notepads/blog-api-rust/: decisions.md  learnings.md
docker/nginx/: nginx.conf
docker/nginx/sites/: blog-api.conf
evidence/week4/: task-1-cargo-check.txt  task-13-compose-config.txt  task-2-error-tests.txt  task-4-auth-tests.txt  task-5-harness-check.txt  task-6-user.txt  task-7-post.txt  task-8-comment.txt  task-9-auth.txt
evidence/week4/demo/: transcript.txt
migrations/: 20240101000001_create_users.up.sql  20240101000002_create_posts.up.sql  20240101000003_create_comments.up.sql  20240101000004_seed_users.up.sql
scripts/: capture_evidence_week4.sh  capture_source_week4.sh  demo_security_week4.sh  demo_week7-8.sh  gen-certs.sh
src/: AGENTS.md  auth.rs  error.rs  lib.rs  main.rs  route.rs
src/handler/: auth.rs  comment.rs  post.rs  user.rs
src/model/: comment.rs  pagination.rs  post.rs  user.rs
src/schema/: comment.rs  mod.rs  pagination.rs  post.rs  user.rs
tests/: auth_test.rs  comment_test.rs  logging_test.rs  mock_example_test.rs  pagination_test.rs  post_test.rs  rate_limit_test.rs  user_test.rs
tests/common/: fixtures.rs  mod.rs
